--- a/ble_led_test/platformio.ini
+++ b/ble_led_test/platformio.ini
@@ -10,6 +10,6 @@
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
-board = esp32dev
+board = esp32doit-devkit-v1
 framework = arduino
-upload_port = /dev/cu.SLAB_USBtoUART
+
